# SmartSpeaker

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
Hardware/: .gitignore
Hardware/V1/: CMakeLists.txt  CMakeListsPrivate.txt
Hardware/V1/src/: DigitalMic.cpp
Hardware/V2/web_radio_v1/: CMakeLists.txt
Hardware/web_radio_v1/main/: CMakeLists.txt  radio.h  web_radio_v1.c
Hardware/web_radio_v1/wifi/: station_wifi.c
Hardware/web_radio_v2/: .gitignore  CMakeLists.txt  aloalo.txt  aloalo2.txt  sdkconfig  sdkconfig.old
Hardware/web_radio_v2/main/: AudioHardware.cpp  AudioHardware.h  AudioPipeline.cpp  AudioPipeline.h  AudioPipeline.hpp  AudioStream.cpp  AudioStream.h  AudioStream.hpp  Buttons.cpp  Buttons.h  CMakeLists.txt  Device.cpp  Device.hpp  Kconfig.projbuild  MQTT.cpp  MQTT.hpp  (+7 more)
Legacy/web_radio_v1/: CMakeLists.txt
Opus/: CMakeLists.txt  README.md  partitions_bt_sink_example.csv  sdkconfig  sdkconfig.old  utils.cpp
Opus/main/: CMakeLists.txt  MQTT.cpp  MQTT.hpp  Opus.cpp  utils.cpp  utils.hpp
Opus/main/AudioPipeline/: AudioPipeline.cpp  AudioPipeline.h  AudioPipeline.hpp
Opus/main/Board/: AudioHAL.cpp  AudioHAL.hpp  BoardAudio.cpp  BoardAudio.hpp  Device.cpp  Device.hpp
Opus/main/Connections/: A2DP_HF.cpp  A2DP_HF.hpp  ADFWiFi.cpp  ADFWiFi.h  ADFWiFi.hpp  BTAudio.cpp  BTAudio.hpp  connections_macros.h
Opus/main/MQTT/: MQTT.cpp  MQTT.hpp  MQTTHandler.cpp  MQTTHandler.h  MQTT_Client.cpp  MQTT_Client.hpp
Opus/main/Radio/: MQTTRadio.cpp  MQTTRadio.h
Software/web_radio_v2/: CMakeLists.txt
main/: Startup.hpp
src/: DigitalMic.cpp  DigitalMic.h
(+23 files in other folders)
