idf_component_register(SRCS
        "Opus.cpp"
        "utils.cpp"
        "Board/Device.cpp"
        "Board/AudioHAL.cpp"
        "MQTT/MQTT.cpp"
        "MQTT/MQTTHandler.cpp"
        "AudioPipeline/AudioPipeline.cpp"
        "Connections/A2DP_HF.cpp"
        "Connections/ADFWiFi.cpp"
                    INCLUDE_DIRS ".")
